# PhysIQ

./: README.md  SUBMISSION_CHECKLIST.md  UPLOAD_GUIDE.md  pyproject.toml  run_benchmark.py  run_eval.py  test_pipeline.py
docs/: 00_PROJECT_OVERVIEW.md  01_TASK_DESIGN.md  02_PHYSICS_ENGINE.md  03_SCENARIO_GENERATION.md  04_REPRESENTATION_FORMATS.md  05_SCORING_SYSTEM.md  06_IMPLEMENTATION_PLAN.md
notebooks/: 00_physiq_benchmark.ipynb  01_trajectory_prediction.ipynb  02_stability_judgment.ipynb  05_adaptive_replanning.ipynb
outputs/: eval_comparison.csv  eval_gemini-2.5-flash.csv  summary_report.txt
physiq/: materials.py
physiq/templates/: __init__.py  replan.py  tool_use.py  trajectory.py
results/: eval_gemini-2.5-pro.csv  ground_truths.json  results_analysis.md  scenarios_full.json  scores.csv
submission_bundle/: .env.example  BUNDLE_LAYOUT.md  README.md  writeup.md
submission_bundle/notebooks/: 03_causal_chain_reasoning.ipynb  04_tool_use_planning.ipynb  physiq_benchmark.ipynb
submission_bundle/physiq/: __init__.py  engine.py  formats.py  generation.py  scoring.py
submission_bundle/physiq/templates/: causal_chain.py  stability.py
submission_bundle/results/: eval_gemini-2.0-flash.csv
